--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -78,7 +78,7 @@ Chapter \ref{chp:ifc} details what information flow tracking means in context of
 The evaluation of our approach is given in chapter \ref{chp:results}-\ref{chp:conclusion}.
 First, the results of the verification process will be presented in chapter \ref{chp:results}.
 These results will then be discussed in chapter \ref{chp:discussion}.
-In chapter \ref{chp:related-work} the results and the approach in general will be compared to related work and in chapter \ref{chp:conclusion}, a final conclusion will be given.
+In chapter \ref{chp:related-work} the results and the approach in general will be compared to related work and in chapter \ref{chp:conclusion}, we will give a final conclusion.
 
 \section{Contributions}
 
