--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -73,14 +73,20 @@ nuXmv allows to think of the following options:
 
 The decision towards using input variables as a model of the stream of instructions was made because of two reasons:
 \begin{enumerate*}[label=\alph*)]
-    \item in the prototyping phase of the model, it was quickly found that using input variables led to significant boosts in performance, and
-    \item using input variable simplified the implementation significantly.
+    \item in the prototyping phase of the model, it was quickly found that using input variables led to significant performance improvements, and
+    \item using input variable simplified the implementation notably.
 \end{enumerate*}
 Having used purely either frozen variables or variables would have increased the size of the state space to be traversed by nuXmv and would have introduced the necessity to implement instruction decoding increasing the complexity of the transition relation.
 Furthermore, it would not have allowed for unbounded model checking of the architecture since the size of programs to be taken into consideration would have been bounded by the size of executable memory.
 
-Yet, using input variables also has some downsides.
-First and foremost, using input variables means that it is pointless to model a \gls{pc} or anything address related like return addresses, a dedicated \gls{lr} or \glspl{csr} such as \gls{mtvec}, the \gls{csr} holding the trap-vector base address, as without a model of executable memory there is nothing addresses could point to.
+Yet, using input variables also has downsides.
+First and foremost, using input variables means that it is pointless to model :
+\begin{itemize}
+    \item a \gls{pc} or anything address related like return addresses,
+    \item a dedicated \gls{lr},
+    \item or \glspl{csr} such as \gls{mtvec}, the \gls{csr} holding the trap-vector base address.
+\end{itemize}
+Without a model of executable memory there is nothing addresses could point to.
 Instead, instructions will simply magically appear on each cycle of the processor model.
 This means that the simulation is inaccurate in this regard which in itself is not a problem because the model is supposed to be an abstraction.
 
@@ -91,9 +97,9 @@ This means that the simulation is inaccurate in this regard which in itself is n
     \label{fig:interrupt-flow}
 \end{figure}
 
-Since it was decided to use input variables over a model of the \gls{mtvec} register and a \gls{pc}, the question now arises: How accurately is the implementation of the MINRV8 architecture capable of simulating real architectures?
+Since we decided to use input variables over a model of the \gls{mtvec} register and a \gls{pc}, the question now arises: How accurately is the implementation of the MINRV8 architecture capable of simulating real architectures?
 
-In a nutshell, the use of input variables over (frozen) variables introduces a sense of non-determinism to the model of the MINRV8 architecture when it comes to handling interrupts and exceptions which is illustrated by the following example:
+The use of input variables over (frozen) variables introduces a sense of non-determinism to the model of the MINRV8 architecture when it comes to handling interrupts and exceptions which is illustrated by the following example:
 Consider some memory layout for the RISC-V architecture as depicted in figure \ref{fig:interrupt-flow} where code is executed from left to right starting with an \minrv{Ecall} instruction.
 Executing this instruction triggers a shift in control to machine-mode which jumps to address \minrv{X} pointed to by the \gls{mtvec} register.
 Then, the instructions at addresses \minrv{X} to \minrv{Z} and subsequent ones are executed until finally, a \minrv{Mret} instruction is read an executed which triggers a jump to address \minrv{A}.
@@ -116,20 +122,19 @@ However, as input variables cannot be constrained in nuXmv, there is no way to m
     \item Second return: \lstinline[language=minrv8,mathescape=true]{Slt, $\dots$}
 \end{enumerate}
 
-Such a stream of instructions is not realistic without some program modifying the code located at \gls{mtvec} and as such \enquote{should not} be considered when checking the \gls{ifc} properties.
+Such a stream of instructions is not realistic without some program modifying the code located at \gls{mtvec} and as such should not be considered when checking the \gls{ifc} properties.
 One would expect to find the same code after an \minrv{Ecall} instruction being executed since in both cases, an architecture would jump to the respective interrupt handler\footnote{%
     To be precise, one would also need to take vectored interrupts into account (c.f. sec. \ref{sec:rv-priv-arch}) but even then, the issue applies.
 }.
-However, there also exists a sequence of input variable valuations that exactly matches a \enquote{real} stream of instructions where the instructions executed after an environment call coincide.
+However, there also exists a sequence of input variable valuations that exactly matches a real stream of instructions where the instructions executed after an environment call coincide.
 
 This illustrates one example for why the implementation of the MINRV8 \textit{abstracts} from real architectures.
 In regard to program flow on traps, it can be expected that the model accurately comprises all expected streams of instructions but also includes many more one would naturally consider to be unrealistic.
 
-The second concept, the abstract implementation of the MINRV8 architecture is missing are jump an branch instructions.
-They are missing for the exact same reasons as described in the previous paragraphs.
+The second concept, the abstract implementation of the MINRV8 architecture is missing are jump and branch instructions.
+They are missing for the same reasons as described in the previous paragraphs.
 Since the implementation does not support executable memory and as such does not support addresses, jumps and branches are pointless instructions.
 This, however, does not turn out to be a fundamental problem.
-
 The implementation might not be able to model programs including jumps and branches but the set of programs considered by nuXmv does include traces that include the same instructions that would have been executed when running a program with jumps and branches but without the jumps and branches.
 We call such a trace a linearization\footnote{%
     Linearization is similar to function inlining supported by many compilers.
@@ -148,39 +153,39 @@ This linearized counterpart is considered by nuXmv and the sequence of states ge
 \paragraph{Summary}
 
 Starting with the premise of this thesis, it was always clear that the MINRV8 architecture is a simplification.
-This, though, is not a problem since by focusing on the very core, security related instructions allowed to implement a tractable and small model in nuXmv.
+This is not a problem since by focusing on the core, security related instructions allowed to implement a tractable and small model in nuXmv.
 If one would add jump and branch instructions to the MINRV8 architecture, it would be fully comparable to actual RISC-V architectures.
 From this point of view, it is not a problem to apply the results of the verification process, i.e. the set of assumptions, to the RISC-V architecture.
 
 The implementation of the MINRV8 architecture abstracted from real-world architectures in two main points:
 \begin{enumerate}
-    \item nuXmv does not guarantee stable behavior on \minrv{Ecall} instructions; this introduces a sense of non-determinism for which there are more programs considered by nuXmv than could actually be run on the MINRV8 architecture.
+    \item nuXmv does not guarantee stable behavior on \minrv{Ecall} instructions; this introduces a sense of non-determinism where nuXmv considers more programs than could actually be run on the MINRV8 architecture.
     This is not problematic because overabstracting the space of all programs $ P $ still leaves nuXmv considering all programs in $ P $.
     \item The implementation does not support jump or branch instructions.
     This is not problematic because programs including jumps can be linearized; such programs \textit{are} considered by nuXmv.
 \end{enumerate}
 
-This leaves us with good reasons to assume that programs considered by nuXmv, i.e. the set of programs quantified over when running proofs, is sufficiently close to the set of \enquote{real} programs of the MINRV8 architecture including jumps and branches.
+This leaves us with good reasons to assume that the set of programs nuXmv quantifies over when running proofs is sufficiently close to the set of \enquote{real} programs of the MINRV8 architecture including jumps and branches.
 
 \subsection{Assumptions}
 
 Recall the requirements of the assumptions that have been laid out in section \ref{sec:sum-background}:
-\begin{enumerate*}
+\begin{enumerate}
     \item The assumptions must be non-trivial,
     \item the assumptions must only constrain machine-mode, and
     \item the assumptions must be practical and verifiable.
-\end{enumerate*}
+\end{enumerate}
 
-In this section, it will be investigated whether the assumptions that ultimately established the correctness of the information flow properties meet all these requirements.
+In this section, we will investigate whether the assumptions that ultimately established the correctness of the information flow properties meet all these requirements.
 
 Regarding point \ref{itm:assumptions-non-trivial}, it must be checked that neither are the assumptions contradictory nor do they trivially entail the information flow properties.
 Recall that we were able to prove that \enquote{$ \text{assumptions} \Leftrightarrow \text{properties} $}.
-In this case, the assumptions could only be contradictory if the properties are as well which they are obviously not as there are valid counter-examples to the properties when no assumptions are given.
-On the other hand, recall that in section \ref{sec:canaries} we were able to make changes to the architecture such that \enquote{$ \neg(\text{assumptions} \Rightarrow \text{properties}) $} held.
+In this case, the assumptions could only be contradictory if the properties are contradictory as well which they are obviously not as there are valid counter-examples to the properties when no assumptions are given.
+On the other hand, recall that in section \ref{sec:canaries} we were able to make changes to the architecture such that \enquote{$ \neg(\text{assumptions} \Rightarrow \text{properties}) $} holds.
 This indicates that the assumption actually express something meaningful and do not trivially entail the information flow properties.
 
 Point \ref{itm:assumptions-machine-mode} also is met by the assumptions introduced in section \ref{sec:assumptions}.
-Whenever it is said that certain instructions must not be executed under certain circumstances, these formulas are guarded by the antecedent \smv{priv ->}.
+Whenever it is stated that certain instructions must not be executed under certain circumstances, these formulas are guarded by the antecedent \smv{priv ->}.
 Additionally, all other assumptions only constrain state transitions being under control of machine-mode only, such as changes to \glspl{csr} or state before machine-mode hands back control to user-mode.
 
 For point \ref{itm:assumptions-verifiable}, meeting point \ref{itm:assumptions-machine-mode} is one step in the right direction.
@@ -204,7 +209,7 @@ The relevant part of the \smv{SP_BANK} assumption is given in snippet \ref{snpt:
     \end{lstlisting}
 \end{figure}
 
-Whilst working on this assumption, it was found that the specific implementation of two \textit{ideas} was critical to the presence of the SYSRET vulnerability, both:
+Whilst working on this assumption, it was found that the specific implementation of two ideas was critical to the presence of the SYSRET vulnerability, both:
 \begin{enumerate}
     \item \label{itm:no-sysret-priv}
     replacing the expression \smv{!priv & X priv} in line \ref{ln:sp-call-priv} by \smv{(op = ECALL) | (bool(MIE) & bool(MEIP))} which is the actual condition under which a trap is taken and
@@ -256,13 +261,13 @@ If the actual work of modeling a prototype and implementing a verification proce
 \enquote{You were able to find vulnerability \textit{X} only because you knew that it was there. Your procedure is nothing but an abstracted simulation of known issues.}
 
 This leads to another concern:
-As with most programming, the verification process will tackle what is aimed for in some more general sense, i.e. when aiming to verify systems against certain bugs these are usually generalized to classes of related vulnerabilities.
+When aiming to verify systems against certain bugs these are usually generalized to classes of related vulnerabilities.
 But with such an approach, one can never be sure that there is no other class of vulnerabilities that was missed.
 In other words: Does the verification procedure have blind spots?
 
 It will now be investigated whether this work is touched by aforementioned two issues.
 
-First, it will be investigated whether a circular argument has been made in this thesis.
+First, we will investigate whether a circular argument has been made in this thesis.
 Recall the steps that have been taken to verify the MINRV8 architecture against the information flow properties:
 \begin{enumerate}
     \item \label{itm:step-minrv}
@@ -311,7 +316,7 @@ Firstly, since the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} was ado
 However, secondly, working with concrete values has two benefits which might become important in future work.
 \begin{enumerate}
     \item If the model ever was to be extended by jumps and branches, deterministic addresses are needed to model static code in executable memory.
-    If not only loads and stores but also jumps and branches would use non-deterministic mechanisms to determine target addresses, modelling executable memory (cf. sec. \ref{sec:discuss-arch}) and for example interrupt handlers located in this very memory would be pointless to begin with.
+    If not only loads and stores but also jumps and branches would use non-deterministic mechanisms to determine target addresses, modelling executable memory (cf. sec. \ref{sec:discuss-arch}) and for example interrupt handlers located in this very memory would be pointless.
     \item Concrete values lead to counter-examples being easier to interpret.
 \end{enumerate}
 
@@ -331,12 +336,13 @@ Initially, it was decided to track labels bit-wise because \begin{enumerate*}[la
 Additionally, it can also be seen that computational instructions never played a major role in any counter-example.
 These results suggest that in future work, if the model ever was to be expanded to a more accurate model of RISC-V and/or to a higher machine-word width and performance problems then are encountered, one could abstract the information flow tracking labels from bit- to word-wise labels.
 This would decrease the size of the state space to be considered by nuXmv exponentially.
-Additionally, one could remove instructions that only alter data but do not add \enquote{new} ways for information to flow.
+Additionally, one could remove instructions that only alter data but do not add new ways for information to flow.
 e.g., the \minrv{Add} instruction - from a pure standpoint of \textit{where} information flows - adds nothing in comparison to the \minrv{Mov} instruction.
-This option only shrinks the state space by a linear factor - nevertheless it might matter.
+This option only shrinks the state space by a linear factor - nevertheless this might matter.
 
 The gist of these findings is:
-Whereas in the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} tracking of each and every bit for a given system was crucial because the authors \textit{could not choose where bugs occur}, it seems that in our more-high-level approach, for every bug \enquote{imaginable}, there is a very simple trace illustrating it: nuXmv is able to choose where a bug occurs since it quantifies over programs as opposed to the work of \citeauthor{Ferraiuolo17} where the program of interest is fixed.
+Whereas in the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} tracking of each and every bit for a given system was crucial because the authors \textit{could not choose where bugs occur}, it seems that in our more-high-level approach, for every type of bug, there is a very simple trace illustrating it.
+nuXmv is able to choose where a bug occurs since it quantifies over programs as opposed to the work of \citeauthor{Ferraiuolo17} where the program of interest is fixed.
 
 \section{Reflection on Requirements}
 \label{sec:discuss-requirements}
@@ -350,6 +356,7 @@ None of these proofs took more than 60s.
 While we can give no clear count of working hours spent on this thesis, all of it was developed and written by a single person in no more than nine months.
 During this time, this person did not solely work on this thesis.
 In a non-research scenario one can assume that development would be more straight forward since it would not include the definition of an architecture.
+
 Due to the exponential blow-up of binary encoded state spaces, there are no guarantees that this approach scales well to realistic and complete architectures.
 However, there are two reasons which make seem likely that this approach does indeed scale.
 Firstly, the proofs here were ran on a small machine and did not take much time.
@@ -358,7 +365,7 @@ All of this gives good reasons to believe that our approach is indeed \textit{vi
 
 To discuss the \textit{relevance} of this work, recall that in section \ref{sec:assumptions} it was shown that the implementation of the MINRV8 architecture models the property \enquote{assumptions $ \Leftrightarrow $ properties}.
 This was put to a test by exposing the implementation to the cache poisoning or SYSRET vulnerability where it was found that it then does violate the properties as presented in section \ref{sec:ifc-properties}.
-In other words: it was shown that the three properties \smv{MEMORY_OP_INTEGRITY}, \smv{CSR_INTEGRITY} and \smv{NO_LEAK} cover at least vulnerabilities related to the cache poisoning or SYSRET vulnerability without any manual intervention besides changing the architecture itself.
+In other words, it was shown that the three properties \smv{MEMORY_OP_INTEGRITY}, \smv{CSR_INTEGRITY} and \smv{NO_LEAK} cover at least vulnerabilities related to the cache poisoning or SYSRET vulnerability without any manual intervention besides changing the architecture itself.
 This marks the main result of this thesis and shows that our approach to verifying \glspl{isa} is \textit{effecitve}.
 Furthermore, mitigations to these vulnerabilities can be verified using the same model.
 It must be decided on a case by case basis whether a given violation of the information flow properties actually marks a vulnerability of the architecture leaving it with the need to be altered or marks a feature the risks of which must be controlled in software.
